--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "nested-json-formatter",
   "displayName": "Nested JSON Formatter",
-  "description": "递归解析嵌套 JSON 并格式化",
-  "version": "1.0.",
+  "description": "%extension.description%",
+  "version": "1.0.5",
   "publisher": "wykdg",
   "engines": {
     "vscode": "^1.80.0"
   },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/wykdg/nested-json-vscode.git"
+},
   "categories": ["Other"],
-  "activationEvents": [
-    "onCommand:nestedJson.format"
-  ],
+  "activationEvents": [],
   "main": "./out/extension.js",
+  "l10n": "./l10n",
   "scripts": {
     "compile": "tsc -p ./",
     "package": "vsce package",
@@ -25,7 +28,7 @@
     "commands": [
       {
         "command": "nestedJson.format",
-        "title": "Nested JSON: 格式化 JSON"
+        "title": "%command.format.title%"
       }
     ],
     "menus": {
